# python-reactors

./: .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.public  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements-edge.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: docker-publish.yml
context_schemas/: uuid.jsonschema
docs/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_sources/: index.rst.txt
docs/api-ref/: modules.html  reactors.agaveutils.html  reactors.aliases.agavedb.tests.html  reactors.aliases.html  (+8 more)
docsrc/: Makefile  conf.py  index.rst
message_schemas/: email-noid.jsonschema  sqs.jsonschema
notes/: 20200831_meeting_notes.md
scripts/: get_agave_creds.sh
src/: reactor.py
tests/: _test_000_imports.py  _test_001_reactors_init.py  _test_003_reactors_jsonmessages.py  conftest.py  test_000_imports.py  test_001_reactors_init.py  test_002_reactors_config.py  test_003_reactors_jsonmessages.py  test_004_reactors_aliases.py  test_005_reactors_nonces.py  test_006_reactors_logs.py  test_007_reactors_process.py  test_008_reactors_resolve_identifier.py  test_009_agaveutils_entity.py  test_010_reactors_agaveutils_files.py  test_011_reactors_agaveutils_recursive.py  test_012_reactors_send_message.py  test_alias.py  test_config.py  test_context.py  test_fixtures.py  test_imports.py  test_jsonmessage.py  test_loggly.py  test_logs.py  test_message.py  test_nonces.py  test_reactors_nonces.py  test_reactors_resolve_identifier.py  test_reactors_send_message.py
(+119 files in other folders)
